--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Sophomore at North South University, Dhaka.<br>
 Sport Programmer and Hobbyist Web Developer.<br>
 I also have some interest in Electronics.</p>
 
-<p>Here I will post about observations about problems which I find interesting or write some tutorials about stuff that I find important and helpful.</p>
+<p>Here I will post about observations about problems which I find interesting or share some tutorials about stuff that I find important and helpful.</p>
 
 <h3 id="content-links-will-be-posted-below">Content Links will be posted below:</h3>
 
