--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:koushik.roy@columbia.edu">Email</a> &nbsp;/&nbsp;
-                  <a href="data/Koushik_CV_PhD.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="data/Koushik_CV_PhD_July.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=K0VYprUAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/96kroy">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://linkedin.com/in/koushikow">LinkedIn</a>
