--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <p class="name" style="text-align: center;">
                   Koushik Roy
                 </p>
-                <p>I'm a computer scientist based in the LA area. Recently, I worked as a software engineer of Edge Computing at a startup named <a target="_blank" href="https://www.elementaryml.com/">Elementary Robotics</a>.
-                </p>
+                <p>I'm a computer scientist based in the LA area. Currently, I work as a Software Engineer at <a href="https://www.exlservice.com/" target="_blank">EXL</a>, in their <a href="https://www.exlservice.com/industries/health-and-life-sciences" target="_blank">healthcare organization</a>. My work involves developing generative AI applications for the largest healthcare companies in the US.</p>
+                <p>Previously, I worked as a software engineer of Edge Computing at a startup named <a target="_blank" href="https://www.elementaryml.com/">Elementary Robotics</a></p>
                 <p>
                   I completed my Master's degree in Computer Science from Columbia University, with a thesis focused on geometric deep learning applications for genomics, supervised by <a href="http://aqlab.io" target="_blank">Mohammed AlQuraishi</a> and <a href="https://scholar.harvard.edu/nazimbouatta/home" target="_blank">Nazim Bouatta</a>.
                 </p>
